# Calebs_Company

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  Dockerfile  requirements.txt
api/app/: main.py
api/app/core/: config.py
api/app/models/: user.py
api/app/routers/: health.py  users.py
api/app/schemas/: user.py
auth/: Dockerfile  go.mod
auth/cmd/server/: main.go
auth/internal/handlers/: auth.go
auth/internal/token/: jwt.go
crypto/: Cargo.toml  Dockerfile
crypto/src/: lib.rs  main.rs
engine/: CMakeLists.txt  Dockerfile
engine/include/: pricing.hpp  stats.hpp
engine/src/: main.cpp  pricing.cpp  stats.cpp
engine/tests/: test_main.cpp
realtime/: Dockerfile  go.mod
realtime/cmd/server/: main.go
realtime/internal/handlers/: ws.go
realtime/internal/hub/: hub.go
web/: .env.local.example  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: api.ts
web/src/types/: index.ts
