[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto"
path = "src/main.rs"

[lib]
name = "crypto_lib"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
criterion = "0.5"
